[package]
name = "rbow"
version = "0.1.0"
edition = "2021"
authors = ["Jeremie Delaitre <jeremie.delaitre@gmail.com>"]

[dependencies]
regex = "1.9.3"
colored = "2"
hex_color = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.3.0"
clap = { version = "4.4.3", features = ["derive"] }
